Mejoras limpieza codigo